--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My First JavaScript Page</title>
+</head>
+<body>
+    <h1>Hello, GitHub Pages!</h1>
+    <button onclick="changeText()">Click me</button>
+    <p id="message"></p>
+
+    <script src="script.js"></script>
+</body>
+</html>
 
